fix: 修复 IntelliJ 2024.1+ 兼容性问题
- 移除可选依赖 org.jetbrains.plugins.json
- 替换弃用的 ReadAction API 调用
- 添加性能测试和版本兼容性测试脚本
- 更新文档